updating google tag

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!-- Google Tag Manager -->
+    <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -12,8 +13,9 @@
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-P5W7GPC");
+      })(window, document, "script", "dataLayer", "GTM-KN7978W");
     </script>
+    <!-- End Google Tag Manager -->
     <!-- End Google Tag Manager -->
 
     <meta charset="utf-8" />
@@ -83,14 +85,16 @@
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-P5W7GPC"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-KN7978W"
         height="0"
         width="0"
         style="display:none;visibility:hidden"
       ></iframe
     ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- End Google Tag Manager (noscript) -->
 
     <noscript>
