--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <!-- Google Tag Manager -->
-    <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -16,7 +15,22 @@
       })(window, document, "script", "dataLayer", "GTM-KN7978W");
     </script>
     <!-- End Google Tag Manager -->
-    <!-- End Google Tag Manager -->
+
+    <!-- End of Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7J44T9SVD8"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-7J44T9SVD8");
+    </script>
+    <!-- End of Global site tag (gtag.js) - Google Analytics -->
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -32,7 +46,7 @@
       property="og:description"
       content="Darian Nocera's Web Development & Design Portfolio."
     />
-    <meta propery="og:url" content="https://www.dnocera.com" />
+    <meta propery="og:url" content="https://www.darnocer.io" />
     <meta property="og:site_name" content="Darian Nocera" />
     <meta property="og:locale" content="en_US" />
 
@@ -85,7 +99,6 @@
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-KN7978W"
@@ -94,7 +107,6 @@
         style="display:none;visibility:hidden"
       ></iframe
     ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     <!-- End Google Tag Manager (noscript) -->
 
     <noscript>
