--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <!-- End of Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-7J44T9SVD8"
+      src="https://www.googletagmanager.com/gtag/js?id=G-XB0ZPW5N6D"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -28,9 +28,8 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-7J44T9SVD8");
+      gtag("config", "G-XB0ZPW5N6D");
     </script>
-    <!-- End of Global site tag (gtag.js) - Google Analytics -->
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
