--- a/public/index.html
+++ b/public/index.html
@@ -38,19 +38,19 @@
     <!-- META PROPERTIES  -->
     <meta
       name="description"
-      content="Darian Nocera's Web Development & Design Portfolio."
+      content="Darian Nocera's Development & Web Design Portfolio."
     />
     <meta property="og:title" content="Darian Nocera" />
     <meta
       property="og:description"
-      content="Darian Nocera's Web Development & Design Portfolio."
+      content="Darian Nocera's Development & Web Design Portfolio."
     />
     <meta propery="og:url" content="https://www.darnocer.io" />
     <meta property="og:site_name" content="Darian Nocera" />
     <meta property="og:locale" content="en_US" />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Darian Nocera | Developer & Designer.</title>
+    <title>Darian Nocera | Denver Website Developer</title>
 
     <!-- BOOTSTRAP CSS  -->
     <link
