social sharing meta

--- a/public/index.html
+++ b/public/index.html
@@ -38,16 +38,20 @@
     <!-- META PROPERTIES  -->
     <meta
       name="description"
-      content="Darian Nocera's Development & Web Design Portfolio."
+      content="Darian Nocera is a Denver-based Front-End Website Developer."
     />
-    <meta property="og:title" content="Darian Nocera" />
+    <meta
+      property="og:title"
+      content="Darian Nocera | Denver Website Developer"
+    />
     <meta
       property="og:description"
-      content="Darian Nocera's Development & Web Design Portfolio."
+      content="Darian Nocera is a Denver-based Front-End Website Developer."
     />
     <meta propery="og:url" content="https://www.darnocer.io" />
-    <meta property="og:site_name" content="Darian Nocera" />
+    <meta property="og:site_name" content="Darian Nocera's Portfolio" />
     <meta property="og:locale" content="en_US" />
+    <meta property="og:image" content="./social_sharing_image.png" />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Darian Nocera | Denver Website Developer</title>
