styling changes to about, projects, contact

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
     <meta propery="og:url" content="https://www.darnocer.io" />
     <meta property="og:site_name" content="Darian Nocera's Portfolio" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="./social_sharing_image.png" />
+    <meta property="og:image" content="http://www.darnocer.io/social_sharing_image.png" />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Darian Nocera | Denver Website Developer</title>
