--- a/public/index.html
+++ b/public/index.html
@@ -38,23 +38,26 @@
     <!-- META PROPERTIES  -->
     <meta
       name="description"
-      content="Darian Nocera is a Denver-based Front-End Website Developer."
+      content="Darian Nocera is a Denver-based Digital Project Manager & Website Developer."
     />
     <meta
       property="og:title"
-      content="Darian Nocera | Denver Website Developer"
+      content="Darian Nocera | Digital Manager & Website Developer"
     />
     <meta
       property="og:description"
-      content="Darian Nocera is a Denver-based Front-End Website Developer."
+      content="Darian Nocera is a Denver-based Digital Project Manager & Website Developer."
     />
     <meta propery="og:url" content="https://www.darnocer.io" />
     <meta property="og:site_name" content="Darian Nocera's Portfolio" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="http://www.darnocer.io/social_sharing_image.png" />
+    <meta
+      property="og:image"
+      content="http://www.darnocer.io/social_sharing_image.png"
+    />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Darian Nocera | Denver Website Developer</title>
+    <title>Darian Nocera | Digital Manager & Website Developer</title>
 
     <!-- BOOTSTRAP CSS  -->
     <link
@@ -72,7 +75,7 @@
 
     <!-- FONTS  -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
 
